// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 96,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 96,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 10,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 14,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 6,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 264,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1183,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1550,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 35,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 144,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 144,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black start",
      "externalProductCode": "66035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black end",
      "externalProductCode": "66035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 66,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 12,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 16,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 8,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 288,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1453,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1920,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 78,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 42,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with dormer start 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 122,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 122,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black end",
      "externalProductCode": "66035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black dormer start",
      "externalProductCode": "66035765",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 36,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 10,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 14,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 6,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 118,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 118,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 284,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1227,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1815,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 62,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 59,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with no calcualted accessories 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 144,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 144,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black start",
      "externalProductCode": "66035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black end",
      "externalProductCode": "66035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 66,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 12,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 16,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 8,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1920,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 78,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 42,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with no valley metal flush 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 144,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 144,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 12,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 16,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 8,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 84,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 288,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1453,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1920,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 78,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 42,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge and valley with top 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 112,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 112,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black start",
      "externalProductCode": "66035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black",
      "externalProductCode": "66035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 20,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_valley metal flush black top",
      "externalProductCode": "66035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 10,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 14,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 6,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 60,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 60,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 229,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 736,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1160,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 51,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 30,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with metal flush verge with no start 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 10,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 14,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 6,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 264,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1183,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1550,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 35,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with stormBracket 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 96,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 96,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 10,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 14,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 6,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 264,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1183,
    },
    Object {
      "category": "fixings",
      "description": "Storm Bracket",
      "externalProductCode": "113456785",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1550,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 35,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "25762568",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates with verge tile 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 10,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 14,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 6,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 264,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1183,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1517,
    },
    Object {
      "category": "tiles",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 0,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge tile black left",
      "externalProductCode": "87035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 18,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge tile black right",
      "externalProductCode": "87035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 18,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge half tile black left",
      "externalProductCode": "87035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 18,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_verge half tile black right",
      "externalProductCode": "87035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 18,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator calculates without half tile 1`] = `
Object {
  "accessories": Array [
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 96,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 96,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Black",
      "externalProductCode": "34391",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 10,
    },
    Object {
      "category": "accessories",
      "description": "Test Guttering Hook Black",
      "externalProductCode": "34392",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 14,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 3,
    },
    Object {
      "category": "accessories",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
      "packSize": "-",
      "quantity": 2,
    },
    Object {
      "category": "accessories",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 6,
    },
    Object {
      "category": "accessories",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "2",
      "quantity": 0,
    },
  ],
  "fixings": Array [
    Object {
      "category": "fixings",
      "description": "Clips",
      "externalProductCode": "113456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 98,
    },
    Object {
      "category": "fixings",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 264,
    },
    Object {
      "category": "fixings",
      "description": "Screw",
      "externalProductCode": "113456784",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1183,
    },
    Object {
      "category": "fixings",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
  "sealing": Array [],
  "tiles": Array [
    Object {
      "category": "tiles",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 1585,
    },
    Object {
      "category": "tiles",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
      "packSize": "-",
      "quantity": 49,
    },
  ],
  "ventilation": Array [
    Object {
      "category": "ventilation",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
      "packSize": "-",
      "quantity": 1,
    },
  ],
}
`;

exports[`PitchedRoofCalculator QuantitiesCalculator convertProductRowToResultsRow defaults to no contingency 1`] = `
Array [
  Object {
    "category": "tiles",
    "description": "Zanda Protector main tile black",
    "externalProductCode": "46035712",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 1550,
  },
  Object {
    "category": "tiles",
    "description": "Zanda Protector half tile black",
    "externalProductCode": "46035795",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 35,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black left start",
    "externalProductCode": "86035763",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black left",
    "externalProductCode": "86035761",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 96,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black right start",
    "externalProductCode": "86035764",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "accessories",
    "description": "Zanda_Protector_verge metal flush black right",
    "externalProductCode": "86035762",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 96,
  },
  Object {
    "category": "tiles",
    "description": "Zanda_Protector_ridge tile black",
    "externalProductCode": "46035761",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 49,
  },
  Object {
    "category": "ventilation",
    "description": "Ventilation Hood 1",
    "externalProductCode": "100456781",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 1,
  },
  Object {
    "category": "accessories",
    "description": "Test Guttering Black",
    "externalProductCode": "34391",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 10,
  },
  Object {
    "category": "accessories",
    "description": "Test Guttering Hook Black",
    "externalProductCode": "34392",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 14,
  },
  Object {
    "category": "accessories",
    "description": "Downpipe",
    "externalProductCode": "33332",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 3,
  },
  Object {
    "category": "accessories",
    "description": "Downpipe Connector",
    "externalProductCode": "33331",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/hc6/h4b/8975279292446/Product-Hero-Small-Desktop-Tablet-44134213-Icopal-Takshingel-type-S-Skiferjpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "fixings",
    "description": "Clips",
    "externalProductCode": "113456781",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 98,
  },
  Object {
    "category": "fixings",
    "description": "Ridge and Hip Screw",
    "externalProductCode": "113456782",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 98,
  },
  Object {
    "category": "fixings",
    "description": "Long Screw",
    "externalProductCode": "113456783",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 264,
  },
  Object {
    "category": "fixings",
    "description": "Screw",
    "externalProductCode": "113456784",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 1183,
  },
  Object {
    "category": "fixings",
    "description": "Finishing Kit",
    "externalProductCode": "113456786",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/ha8/hf4/8975277850654/Product-Hero-Small-Desktop-Tablet-44134160-Icopal-Takshingel-type-S-Teglrodjpg",
    "packSize": "-",
    "quantity": 1,
  },
  Object {
    "category": "accessories",
    "description": "Underlay Divoroll TOP RU",
    "externalProductCode": "26583450",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h02/hc4/8975281455134/Product-Hero-Small-Desktop-Tablet-44134232-Icopal-Takshingel-type-S-Teglrod-med-skyggejpg",
    "packSize": "-",
    "quantity": 2,
  },
  Object {
    "category": "accessories",
    "description": "Fuglelist ventilert",
    "externalProductCode": "5555551",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "-",
    "quantity": 6,
  },
  Object {
    "category": "accessories",
    "description": "Other accesories example",
    "externalProductCode": "5555550",
    "image": "https://bmipimngprodtfe.azureedge.net/sys-master-hybris-media/h77/hdc/8975277129758/Product-Hero-Small-Desktop-Tablet-44134186-Icopal-Takshingel-type-S-Kullsortjpg",
    "packSize": "2",
    "quantity": 0,
  },
]
`;
